--- a/app/templates/receptionist/appointment.html
+++ b/app/templates/receptionist/appointment.html
@@ -1,49 +1,56 @@
 {% extends "base.html" %}
 {% block title %}DocCare | Appointment{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='receptionist_style.css') }}"> {% endblock %}
+{% block link %}
+    {{ super() }}
+    <link rel="stylesheet" href="{{ url_for('static', filename='receptionist_style.css') }}">
+{% endblock link %}
+
+
 {% block content %}
-    <div class="sidenav-bg">
-        <div class="cms-logo">
-            <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
-        </div>
-        <ul>
-            <a href="{{ url_for('receptionist.dashboard') }}">
-                <li class="icon-bg">
-                    <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
-                    <p>Dashboard</p>
-                </li>
-            </a>    
-            <a href="{{ url_for('receptionist.calendar') }}">
-                <li class="icon-bg">
-                    <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
-                    <p>Calendar</p>
-                </li>
-            </a>
-            <li class="selected-icon-bg">
-                <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
-                <p>Appointment</p>
-            </li>
-            <a href="{{ url_for('receptionist.profile') }}">
-                <li class="icon-bg">
-                    <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
-                    <p>Profile</p>
-                </li>
-            </a>
-        </ul>
-        <div class="sidenav-user-bg">
-            <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
-            <div>
-                <h3>Eda Grace P.</h3>
-                <p>Receptionist</p>
+    <!-- Sidebar -->
+    {% include "receptionist/appointment_sidebar.html" %}
+
+    <!--Content start!-->
+    <div class="content">
+        <body class="appointment_body">
+            <div class="container"> 
+                <main class="doccare-appointment-table">
+                    <section class="table__header__appointment">
+                        <h1> 
+                            <strong> APPOINTMENT </strong> 
+                        </h1>
+                    </section>
+                    <section class="doccare-table-appointment-content">
+                        <table>
+                            <thead>
+                                <tr>
+                                    {% for header in headings %}
+                                        <th>
+                                            {{   header }}
+                                        </th>
+                                    {% endfor %}
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for row in data %}
+                                    <tr>
+                                        <td> <strong> {{ row[0] }} </strong> </td>
+                                        <td> {{ row[1] }} </td>
+                                        <td> {{ row[2] }} </td>
+                                        <td> 
+                                            <p class="status done"> {{ row[3] }} </p>
+                                        </td>
+                                        <td class="table__cell">
+                                            <button type="button" class="btn btn-danger delete-button" data-id="{{ row[0] }}">Delete</button>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                </main>
             </div>
-        </div>
-        <ul>
-            <a href="{{ url_for('receptionist.logout') }}">
-                <li class="logout">
-                    <img src="{{ url_for('static', filename='images/Logout.png') }}">
-                    <p>Logout</p>
-                </li>
-            </a>
-        </ul>
+        </body>
     </div>
+    
+
 {% endblock %}
