--- a/app/templates/receptionist/appointment/appointment_add.html
+++ b/app/templates/receptionist/appointment/appointment_add.html
@@ -26,117 +26,135 @@
             </a>        
             <br/><br/>
         </section>
-        <section class="round-circle">
-            <label></label>
+        
+        <section class="doccare-title">
+            <label class="doccare-first">Doc</label><label class="doccare-second">Care</label>
+            <a href="{{ url_for('receptionist.dashboard') }}">
+                <div class="doccare-home-icon">
+                    <img src="{{ url_for('static', filename='images/Home 1.png') }}">
+                </div>
+            </a>
         </section>
-        <div class="appointment-add-forms">
-            <div>
-            </br>
-            </br>
-                <section class="doccare-add-appointment-paragraph">
-                    <p>
-                        Patient details are required for the medical record. Please fill in all the details below
-                    </p>
-                </section>
-                <form class="row g-3 needs-validation" method="POST" action="/add-appointment/" novalidate>
-                    <!-- FIRST NAME -->
-                    <div class="doccare-forms-appointment">
-                        <label for="validationCustom03" class="form-label">FIRST NAME</label>
-                        <label class="asterisk"> * </label> 
-                        <input type="text" class="form-control" id="validationCustom03" name="last_name" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please enter your First Name.
-                        </div>
-                    </div>
-                    <!-- MIDDLE NAME -->
-                    <div class="doccare-forms-appointment">
-                        <label for="validationCustom03" class="form-label">MIDDLE NAME</label>
-                        <label class="asterisk"> * </label> 
-                        <input type="text" class="form-control" id="validationCustom03" name="last_name" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please enter your First Name.
-                        </div>
-                    </div>
-                    <!-- LAST NAME -->
-                    <div class="doccare-forms-appointment">
-                        <label for="validationCustom03" class="form-label">LAST NAME</label>
-                        <label class="asterisk"> * </label> 
-                        <input type="text" class="form-control" id="validationCustom03" name="last_name" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please enter your First Name.
-                        </div>
-                    </div>
-                    <!-- DATE OF BIRTH -->
-                    <div class="doccare-forms-appointment">
-                        <label for="validationCustom06" class="form-label">DATE OF BIRTH</label>
-                        <label class="asterisk"> * </label> 
-                        <label class="date-format"> (MM/DD/YYYY) </label>
-                        <select class="form-select" id="validationCustom06" name="gender" required>
-                            <option selected disabled value="">Choose...</option>
-                            <option>Male</option>
-                            <option>Female</option>
-                        </select>
-                        <div class="invalid-feedback">
-                            Please select your Gender.
-                        </div>
-                    </div>
-                    <!-- SEX -->
-                    <div class="doccare-forms-appointment">
-                        <label for="validationCustom06" class="form-label">SEX</label> 
-                        <label class="asterisk"> * </label> 
-                        <select class="form-select" id="validationCustom06" name="gender" required>
-                            <option selected disabled value="">Choose...</option>
-                            <option>Male</option>
-                            <option>Female</option>
-                        </select>
-                        <div class="invalid-feedback">
-                            Please select your Gender.
-                        </div>
-                    </div>
-                    <!-- ADDRESS -->
-                    <div class="doccare-forms-appointment">
-                        <label for="validationCustom03" class="form-label">ADDRESS</label>
-                        <label class="asterisk"> * </label> 
-                        <input type="text" class="form-control" id="validationCustom03" name="last_name" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please enter your First Name.
-                        </div>
-                    </div>
-                    <!-- CONTACT NUMBER -->
-                    <div class="doccare-forms-appointment">
-                        <label for="validationCustom03" class="form-label">CONTACT NUMBER</label>
-                        <label class="asterisk"> * </label> 
-                        <input type="text" class="form-control" id="validationCustom03" name="last_name" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                            Please enter your First Name.
-                        </div>
-                    </div>
+        <section class="doccare-main-content">
 
-                    <br/><br/>
-                
-                    <div class="col-12">
-                        <!-- Add the CSRF token input here -->
-                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                        <button class="btn btn-primary doccare-appointment-continue-button" type="button">CONTINUE</button>
-                    </div>
-                </form>
+            <div class="appointment-add-forms">
+                <div>
+                </br>
+                </br>
+                    <section class="numbers-on-top">
+                        <label class="number-one">1</label>
+                        <label class="number-two">2</label>
+                        <label class="number-three">3</label>
+                    </section>
+                </br>
+                    <section class="doccare-add-appointment-paragraph">
+                        <p>
+                            Patient details are required for the medical record. Please fill in all the details below
+                        </p>
+                    </section>
+                    <form class="row g-3 needs-validation" method="POST" action="/add-appointment/" novalidate>
+                        <!-- FIRST NAME -->
+                        <div class="doccare-forms-appointment">
+                            <label for="validationCustom01" class="form-label">FIRST NAME</label>
+                            <label class="asterisk"> * </label> 
+                            <input type="text" class="form-control" id="validationCustom01" name="first_name" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please enter your <strong>first name</strong>.
+                            </div>
+                        </div>
+                        <!-- MIDDLE NAME -->
+                        <div class="doccare-forms-appointment">
+                            <label for="validationCustom02" class="form-label">MIDDLE NAME</label>
+                            <label class="asterisk"> * </label> 
+                            <input type="text" class="form-control" id="validationCustom02" name="middle_name" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please enter your <strong>middle name</strong>.
+                            </div>
+                        </div>
+                        <!-- LAST NAME -->
+                        <div class="doccare-forms-appointment">
+                            <label for="validationCustom03" class="form-label">LAST NAME</label>
+                            <label class="asterisk"> * </label> 
+                            <input type="text" class="form-control" id="validationCustom03" name="last_name" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please enter your <strong>last name. </strong>
+                            </div>
+                        </div>
+                        <!-- DATE OF BIRTH -->
+                        <div class="doccare-forms-appointment">
+                            <label for="validationCustom04" class="form-label">DATE OF BIRTH</label>
+                            <label class="asterisk"> * </label> 
+                            <label class="date-format"> (MM/DD/YYYY) </label>
+                            <input type="date" class="form-control" id="validationCustom04" name="birth_date" required> 
+                            <div class="invalid-feedback">
+                                Please select your <strong>date of birth</strong>.
+                            </div>
+                        </div>
+                        <!-- SEX -->
+                        <div class="doccare-forms-appointment">
+                            <label for="validationCustom05" class="form-label">SEX</label> 
+                            <label class="asterisk"> * </label> 
+                            <select class="form-select" id="validationCustom05" name="sex" required>
+                                <option selected disabled value="">Choose...</option>
+                                <option>Male</option>
+                                <option>Female</option>
+                            </select>
+                            <div class="invalid-feedback">
+                                Please select your <strong>sex</strong>.
+                            </div>
+                        </div>
+                        <!-- ADDRESS -->
+                        <div class="doccare-forms-appointment">
+                            <label for="validationCustom06" class="form-label">ADDRESS</label>
+                            <label class="asterisk"> * </label> 
+                            <input type="text" class="form-control" id="validationCustom06" name="address" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please enter your complete <strong>address</strong>.
+                            </div>
+                        </div>
+                        <!-- CONTACT NUMBER -->
+                        <div class="doccare-forms-appointment">
+                            <label for="validationCustom07" class="form-label">CONTACT NUMBER</label>
+                            <label class="asterisk"> * </label> 
+                            <input type="text" class="form-control" id="validationCustom07" name="contact_number" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please enter your <strong>contact number</strong>.
+                            </div>
+                        </div>
+
+                        <br/><br/>
+                    
+                        <div class="col-12">
+                            <!-- Add the CSRF token input here -->
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                            <button class="btn btn-primary doccare-appointment-continue-button" type="button" id="add-appoinment-button">CONTINUE</button>
+                            <!-- <a href="{{ url_for('receptionist.appointment') }}" class="btn btn-primary doccare-appointment-continue-button">CONTINUE</a> -->
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
+            <div class="overlay-container">
+                <div class="overlay"><label class="doccare-circle"></label></div>
+                <div class="doccare-other-things">
+                    <label class="doccare-rectangle"></label>
+                </div>
+            </div>
+        </section>
     </div>
 
     <!-- Include these script tags -->
@@ -144,6 +162,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
+        $(document).ready(function() {
+            // Add a click event listener to the "CONTINUE" button
+            $("#add-appoinment-button").click(function(event) {
+                // Fetch the form element
+                const form = document.querySelector('.needs-validation');
+        
+                // Check if the form is valid
+                if (form.checkValidity()) {
+                    // Redirect to the next page
+                    window.location.href = "/receptionist/add-appointment/";
+                } else {
+                    // If invalid, prevent form submission and display validation styles
+                    event.preventDefault();
+                    event.stopPropagation();
+                    form.classList.add('was-validated');
+                }
+            });
+        });
+
         // Example starter JavaScript for disabling form submissions if there are invalid fields
         (() => {
             'use strict'
