--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -28,7 +28,7 @@ main {
 /* -------------------------------------------- SIDEBAR DOCCARE LOGO -------------------------------------------- */
 .cms-logo { 
     margin-top: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     align-items: center;
     justify-content: center;
     font-size: 12px;
@@ -64,9 +64,8 @@ main {
 
 /* notifications */
 .notifications {  
-    height: 45px; 
     margin-left: 5px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .notifications:active {
@@ -78,7 +77,7 @@ main {
     width: 85%;  
     height: 40px; 
     border-radius: 20%; 
-    transition: width 0.2s;
+    transition: width 0.5s;
     margin-left: 5px;
 }
 
@@ -112,12 +111,12 @@ main {
 .icon-bg p, .logout p, .selected-icon-bg p {
     display: flex;
     position: relative;
-    transition: all 0.3s ease-out; 
+    transition: all 0.3s ease-in; 
     opacity: 0;
     visibility: hidden;
     transform: translateY(-50%);
     top: 18px;
-    left: 20px;
+    left: 25px;
     padding: 10px;
     border-radius: 10px;
     background-color: var(--darkBlue);
@@ -126,7 +125,7 @@ main {
 }
 
 .icon-bg:hover p, .logout:hover p, .selected-icon-bg:hover p {
-    left: 25px;
+    left: 30px;
     opacity: 1;
     visibility: visible;
     z-index: 99;
@@ -143,7 +142,6 @@ ul li {
     cursor: pointer;
     font-size: 14px;
     font-weight: 900;
-    transition: 1ms;
 }
 
 a {
@@ -177,6 +175,7 @@ ul li p {
     height: 50px; 
     overflow: hidden;
     margin-bottom: 15px;
+    width: 500px;
 }
 
 .sidenav-user-bg:hover {
@@ -186,7 +185,7 @@ ul li p {
 
 .sidenav-user-bg div {
     position: relative;
-    transition: all 0.3s ease-out;
+    transition: all 0.3s ease-in;
     opacity: 0;
     visibility: hidden;
     background-color: var(--darkBlue);
@@ -213,7 +212,7 @@ ul li p {
     position: absolute;
     bottom: 0;
     margin-bottom: 10px;
-  }
+}
 
 /* -------------------------------------------- DASHBOARD -------------------------------------------- */
 .date-time {
